--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="scroll_right">Scroll right</string>
     <string name="expand_info">Expand info</string>
     <string name="description">Description:</string>
+    <string name="enter_text">Enter text</string>
 </resources>
