--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="expand_info">Expand info</string>
     <string name="description">Description:</string>
     <string name="enter_text">Enter text</string>
+    <string name="meter_short">m</string>
+    <string name="meters">meters</string>
+    <string name="distance_to_station_is">Distance to station from your location</string>
 </resources>
