--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="distance_to_station_is">Distance to station from your location</string>
     <string name="latitude">Latitude:</string>
     <string name="longitude">Longitude:</string>
+    <string name="welcome">Welcome!</string>
+    <string name="home">Home</string>
 </resources>
