--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -15,4 +15,6 @@
     <string name="longitude">Долгота:</string>
     <string name="welcome">Добро пожаловать!</string>
     <string name="home">Главная</string>
+    <string name="name">Имя:</string>
+    <string name="message">Сообщение:</string>
 </resources>
