added a button for navigating forward from HomeFragment

--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -17,4 +17,5 @@
     <string name="home">Главная</string>
     <string name="name">Имя:</string>
     <string name="message">Сообщение:</string>
+    <string name="next">Далее</string>
 </resources>
