--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="home">Home</string>
     <string name="name">Name:</string>
     <string name="message">Message:</string>
+    <string name="next">Next</string>
 </resources>
